cmake_minimum_required(VERSION 3.10)
project(JMA_code)

#---------------------------------------------------------------------------
# Add subdirectories
#
# The Makefile recurses into the "sofa" directory.
# Each subdirectory is expected to have its own CMakeLists.txt.
#---------------------------------------------------------------------------
add_subdirectory(sofa)



